# housekeeper

./: .gitignore  LICENSE  README.md  install-icons.sh  pyproject.toml
assets/: housekeeper.desktop
housekeeper/: __init__.py  main.py
housekeeper/collectors/: __init__.py  amd_gpu.py  apple_gpu.py  conntrack.py  cpu.py  disk.py  gaudi.py  gpu.py  gpu_process.py  kernel.py  memory.py  network.py  nfs.py  pcie.py  process.py  temperature.py
housekeeper/ui/: __init__.py  bar.py  colors.py  gui.py  renderer.py  text_renderer.py
